# barde

./: .gitignore  CMakeLists.txt  README.md  backup-db-struct.sh  config-fcgi.js  config.js  playlists.sql
app/: login.cpp  login.h  main.cpp  master.cpp  master.h  playlist.cpp  playlist.h  playlistComment.cpp  playlistComment.h  playlistVote.cpp  playlistVote.h  song.cpp  song.h  songVote.cpp  songVote.h  user.cpp  user.h
app/util/: pathMethods.cpp  pathMethods.h  stringMethods.cpp  stringMethods.h
app/validator/: imageValidator.cpp  imageValidator.h  songValidator.cpp  songValidator.h
app/validators/: abstractValidator.h  songValidator.cpp
data/: artist.h  artistMapper.cpp  artistMapper.h  dbMapper.cpp  dbMapper.h  htmlPage.h  login.h  loginMapper.cpp  loginMapper.h  media.h  mediaMapper.cpp  mediaMapper.h  playlist.h  playlistComment.h  playlistCommentMapper.cpp  playlistCommentMapper.h  playlistMapper.cpp  playlistMapper.h  playlistVote.h  playlistVoteMapper.cpp  playlistVoteMapper.h  song.h  songMapper.cpp  songMapper.h  songVote.h  songVoteMapper.cpp  songVoteMapper.h  user.h  userMapper.cpp  userMapper.h
data/forms/: login.h  playlist.h  song.h
data/pages/: htmlPage.h  login.h  playlist.h  song.h
forms/: login.h  playlist.h  song.h
views/: allPlaylists.tmpl  editSong.tmpl  login.tmpl  master.tmpl  newPlaylist.tmpl  playlist.tmpl  playlistHtml5.tmpl  playlistJwp.tmpl  proposedSongs.tmpl
www/public/: favicon.xcf
www/public/css/: main.scss  playlist.css.map
www/public/css/base/: flaticon.scss  general.scss  mixins.scss  reset.scss  variables.scss
www/public/css/layout/: alerts.scss  all-playlist.scss  comments.scss  login.scss  player.scss  playlist.scss  profile.scss  propose-song.scss  top-menu.scss  wrapper.scss
www/public/font-flaticon/: Flaticon.eot  flaticon.html
www/public/js/: comment-playlist.js  simple-player.js  vote-playlist.js
www/public/js/playlist/: comments.js  new.js  player.js  votes.js
(+5 files in other folders)
